# llm-excel

./: .env.local.example  .gitignore  CLAUDE.md  DEPLOYMENT_FINAL.md  DOCKER_REFACTOR.md  DOCKER_SCRIPTS.md  ENV.md  IMPLEMENTATION_COMPLETE.md  INITIALIZATION.md  INITIALIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  TODO.md  VERSION.md  VERSION_IMPLEMENTATION.md  package.json  pnpm-lock.yaml  turbo.json  问题记录.md
apps/api/: .env.example  .gitignore  DATABASE_DESIGN.md  Dockerfile  README.md  README_DATABASE.md  SPEC.md  USAGE.md  cli.py  package.json  pyproject.toml  startup.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 10b67afa37d8_initial_migration.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  main.py
apps/api/app/api/routes/: auth.py  btrack.py  chat.py  excel.py  fixture.py  role.py  thread.py  user.py
apps/api/app/core/: base.py  config.py  database.py  init_permissions.py  jwt.py  llm_client.py  permissions.py  sse.py  version_check.py
apps/api/app/engine/: excel_generator.py  executor.py  models.py  output_generator.py  parser.py  prompt.py
apps/api/app/models/: __init__.py  auth.py  file.py  role.py  thread.py  user.py
apps/api/app/processor/: excel_processor.py  types.py
apps/api/app/processor/stages/: execute.py  generate_validate.py
apps/api/app/schemas/: auth.py  response.py
apps/api/app/scripts/: __init__.py
apps/api/app/scripts/init_db_data/: __main__.py
apps/api/app/services/: auth.py  excel.py  processor_stream.py  thread.py
apps/api/scripts/: generate_version.py
docker/: README.md  (+5 more)
(+108 files in other folders)
